--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,18 +1,35 @@
 @charset "utf-8";
 
         body {
-            background-color: white; 
+            background-color: #dddddd; 
             color: rgba(0,0,0,1);
         }
         p {
             text-align: justify; 
             text-indent: 36px;
         }
+
+        header#cabecalho img#icone {
+            position: absolute;
+            left: 900px;
+            top: 40px;
+        }
+        /* FORMATAÇÃO DE INTERFACE, DELIMITADOS MARGENS */
+        div#interface {
+            width: 900px;
+            background-color:#ffffff;
+            margin: -20px auto 0px auto; 
+            box-shadow: 2px 2px 3px rgba(0,0,0,.5);
+            padding: 10px;
+
+
+        }
+
     /*FORMATAÇAO DE IMAGENS COM LENGENDAS*/
     figure.foto_legenda {
         position: relative;
         border: 8px solid white;
-        box-shadow: 1px 1px 4px blue; /*formatar um borda */
+        box-shadow: 1px 1px 4px rgba(0,0,0,.5); /*formatar um borda */
         
     }
     figure.foto_legenda img {
@@ -37,14 +54,23 @@
         opacity: 1;
     }
 
+    figure.foto_legenda h3 {
+        text-indent: 36px;
+        
+
+    }
+
     /* FORMATAÇÃO DO MENU*/
     nav#menu ol {
         list-style: none;
         text-transform: uppercase;
         position: absolute;
         top: -20px;
-        left: 700px;
+        left: 500px;
 
+    }
+    nav#menu li:hover{
+        background-color: blueviolet;
     }
 
     nav#menu li {
@@ -52,6 +78,7 @@
         background-color: #dddddd;
         padding: 10px;
         margin: 2px;
+        transition: background-color 2s;
 
     }
     nav#menu {
@@ -61,3 +88,14 @@
     nav#menu h1{
         display: none;
     }
+
+    nav#menu a {
+        color: black;
+        text-decoration: none;
+
+    }
+    nav#menu a:hover {
+        color: blue;
+        
+    }
+  
