--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -92,6 +92,7 @@
 
     figure.foto_legenda h3 {
         text-indent: 36px;
+        text-align: center;
         
 
     }
@@ -115,6 +116,7 @@
         padding: 10px;
         margin: 2px;
         transition: background-color 2s;
+        border-radius: 5px;
 
     }
     nav#menu {
@@ -151,30 +153,32 @@
         color:#606060 ;
         background-color: #dddddd;
         padding:5px 0px 5px 10px;
-        margin: 10px 0px 10px 0px;
+        margin: 29px 0px 10px 0px;
 
 
     }
     header#cabecalhoArtigo h1{
         font-family: 'fonteLogo', sans-serif;
         font: 20pt;
-        color: red;
+        color:#666666;
         margin-bottom: 0px;
 
     }
     header#cabecalhoArtigo h2{
         font-size: 13pt;
-        color: blue;
+        color: rgb(170, 168, 168);
         background-color: white;
         margin: 0px;
 
     }
-    header#cabecalhoArtigo h3{
+    header#cabecalhoArtigo span{
+    color: black;
+    float: right;
+    margin: 5px;
+    font-size: 10px;
 
-
+   
     }
-
-
 
     table#tabelaEspec {
         border: 1px solid #666666;
@@ -228,13 +232,27 @@
     aside#corpoLateral{
         display: block;
         width: 350px;
-        float: right;    
-
+        float: right; 
+        background-color: #d3d3d3;  
+       margin-top: 10px;
+       padding: 10px;
+       
     }
-
+    aside#corpoLateral h2{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #666666;
+        color: white;
+        padding: 5px;
+        font-size: 15px;
+    }
+    aside#corpoLateral h1{
+        font-family: 'fonteLogo';
+        margin-top: 0px;
+        color:#666666;
+    }
     footer#rodape{
         clear: both; /*limpar conteudo do rodapé*/
-        border-top: 1.5px solid #666666;
+        border-top: 1.5px solid #bdb9b9;
 
 
     }
