--- a/_css/fotos.css
+++ b/_css/fotos.css
@@ -7,3 +7,89 @@
 p#area{
     padding-top: 18px;
 }
+
+.dir{
+    display: block;
+    float: right;
+    font-size: 10px;
+}
+
+ul#albumFotos li span{
+    opacity: 0;
+    color:white;
+    box-shadow: 1px 1px 1px #000000;
+    background-color: rgba(0, 0, 0, .2);
+    font-size: 9pt;
+    padding: 5px;
+    border-radius: 0 10px 10px 0;
+    line-height: 370px;
+
+}
+
+ul#albumFotos li:hover span{
+    opacity: 1 ;
+
+}
+
+
+ul#albumFotos{
+    width: 700px;
+    margin: 0 auto;
+    padding: 50px;
+    overflow: hidden;
+    list-style: none; /* usado para remover os "pontos" que dermacamalista não ordenadas */
+}
+
+ul#albumFotos li{
+    float: left;
+    width: 200px;
+    height: 200px;
+    border: 2px solid white;
+    margin: 8px;
+}
+
+
+ul#albumFotos li#foto1{
+    background: url('../_imagens/galeria-01.jpg') no-repeat;
+} /* adiciona uma foto e ao se repete, dentro da li configurada */
+ul#albumFotos li#foto1:hover{
+    background-position: 0 0;
+    background-size: 200px 200px;
+}
+
+ul#albumFotos li#foto2{
+    background: url('../_imagens/galeria-02.jpg') no-repeat;
+}
+ul#albumFotos li#foto2:hover{
+    background-position: 0 0;
+    background-size: 200px 200px;
+}
+
+ul#albumFotos li#foto3{
+    background: url('../_imagens/galeria-03.jpg') no-repeat;
+}
+ul#albumFotos li#foto3:hover{
+    background-position: 0 0;
+    background-size: 200px 200px;
+}
+ul#albumFotos li#foto4{
+    background: url('../_imagens/galeria-04.jpg') no-repeat;
+}
+ul#albumFotos li#foto4:hover{
+    background-position: 0 0;
+    background-size: 200px 200px;
+}
+ul#albumFotos li#foto5{
+    background: url('../_imagens/galeria-05.jpg') no-repeat;
+}
+ul#albumFotos li#foto5:hover{
+    background-position: 0 0;
+    background-size: 200px 200px;
+}
+ul#albumFotos li#foto6{
+    background: url('../_imagens/galeria-06.jpg') no-repeat;
+}
+ul#albumFotos li#foto6:hover{
+    background-position: 0 0;
+    background-size: 200px 200px;
+}
